wrapping div keep having spacing issue - now removed it and style each content

--- a/src/main.module.css
+++ b/src/main.module.css
@@ -45,27 +45,25 @@ h2 {
   display: block;
   border-top: 1px solid #e5e5e5;
   text-align: left;
-  padding-left: 32px;
-  padding: 16px 0px 16px 32px;
   width: 100%;
   display: block;
 }
 .product_name {
   color: #6a6a6a;
   font-size: 16px;
-  margin: 0px 0px 4px 0px;
+  margin: 16px 0px 8px 32px;
   display: block;
 }
 
 .product_description {
   color: #bfbfbf;
-  margin: 0px 0px 8px 0px;
+  margin: 8px 0px 8px 32px;
 }
 
 .product_price {
   display: block;
   color: #272727;
-  margin: 0;
+  margin: 8px 0px 16px 32px;
 }
 
 @media (min-width: 768px) {
